--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Page</title>
+    <title>Haar's Half Measure</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 40px; }
+        nav { margin-bottom: 20px; }
+        nav a { margin: 0 10px; text-decoration: none; color: #555; }
+        nav a:hover { color: #000; }
+        h1 { font-size: 36px; color: #333; }
+        p { font-size: 18px; color: #666; }
+        footer { margin-top: 50px; font-size: 14px; color: #999; }
+    </style>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <p>Welcome to my GitHub Pages website.</p>
+    <header>
+        <h1>Haar's Half Measure</h1>
+        <p>What I talk about when I talk about physics.</p>
+        <hr>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Non-relativistic</a>
+        <a href="#">Relativistic</a>
+        <a href="#">Tags</a>
+    </nav>
+    <main>
+        <p>My name is Nguyễn Minh Hiếu, and I work on computational physics. This page showcases some of my research and interests...</p>
+    </main>
+    <footer>
+        <p>2024 © Nguyễn Minh Hiếu</p>
+    </footer>
 </body>
 </html>
